--- a/servers/web/public/index.html
+++ b/servers/web/public/index.html
@@ -26,59 +26,62 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <!-- SideBar -->
-      <ul class="navbar-nav navbar-sidenav" id="exampleAccordion" ng-cloak ng-show="sidebar">
-        <li class="nav-item" data-toggle="tooltip" data-placement="right" title="" data-original-title="Workers">
-          <a class="nav-link" href="#!workers">
-            <i class="fa fa-fw fa-desktop"></i>
-            <span class="nav-link-text">Workers</span>
-          </a>
-        </li>
-        <li class="nav-item" data-toggle="tooltip" data-placement="right" title="" data-original-title="Groups" ng-controller="groupCtrl">
-          <a class="nav-link nav-link-collapse collapsed" data-toggle="collapse" ng-href="#collapseComponents" data-parent="#exampleAccordion">
-            <i class="fa fa-fw fa-folder"></i>
-            <span class="nav-link-text">Groups</span>
-          </a>
-          <ul class="sidenav-second-level collapse" id="collapseComponents">
-            <li>
-              <a href="#!active"><span class="badge badge-secondary">{{activeCount}}</span> Active</a>
-            </li>
-            <li>
-              <a href="#!finished"><span class="badge badge-secondary">{{finishedCount}}</span> Finished</a>
-            </li>
-            <li>
-              <a href="cards.html"><span class="badge badge-secondary">{{canceledCount}}</span> Paused</a>
-            </li>
-            <li>
-              <a href="cards.html"><i class="fa fa-fw fa-plus"></i> Add</a>
-            </li>
-          </ul>
-        </li>
-        <li class="nav-item" data-toggle="tooltip" data-placement="right" title="" data-original-title="Logs">
-          <a class="nav-link" href="charts.html">
-            <i class="fa fa-fw fa-file"></i>
-            <span class="nav-link-text">Logs</span>
-          </a>
-        </li>
-        <li class="nav-item" data-toggle="tooltip" data-placement="right" title="" data-original-title="Scheduler">
-          <a class="nav-link" href="tables.html">
-            <i class="fa fa-fw fa-calendar"></i>
-            <span class="nav-link-text">Scheduler</span>
-          </a>
-        </li>
-        <li class="nav-item" data-toggle="tooltip" data-placement="right" title="" data-original-title="Configuration">
-          <a class="nav-link" href="tables.html">
-            <i class="fa fa-fw fa-cog"></i>
-            <span class="nav-link-text">Configuration</span>
-          </a>
-        </li>
-      </ul>
-      <ul class="navbar-nav sidenav-toggler" ng-cloak ng-show="sidebar">
-        <li class="nav-item">
-          <a class="nav-link text-center" id="sidenavToggler">
-            <i class="fa fa-fw fa-angle-left"></i>
-          </a>
-        </li>
-      </ul>
+      <div ng-cloak ng-show="sidebar">
+        <ul class="navbar-nav navbar-sidenav" id="exampleAccordion">
+          <li class="nav-item" data-toggle="tooltip" data-placement="right" title="" data-original-title="Workers">
+            <a class="nav-link" href="#!workers">
+              <i class="fa fa-fw fa-desktop"></i>
+              <span class="nav-link-text">Workers</span>
+            </a>
+          </li>
+          <li class="nav-item" data-toggle="tooltip" data-placement="right" title="" data-original-title="Groups" ng-controller="groupCtrl">
+            <a class="nav-link nav-link-collapse collapsed" data-toggle="collapse" ng-href="#collapseComponents" data-parent="#exampleAccordion">
+              <i class="fa fa-fw fa-folder"></i>
+              <span class="nav-link-text">Groups</span>
+            </a>
+            <ul class="sidenav-second-level collapse" id="collapseComponents">
+              <li>
+                <a href="#!active"><!--<span class="badge badge-secondary">{{activeCount}}</span>--> Active</a>
+              </li>
+              <li>
+                <a href="#!finished"><!--<span class="badge badge-secondary">{{finishedCount}}</span>--> Finished</a>
+              </li>
+              <li>
+                <a href="#!paused"><!--<span class="badge badge-secondary">{{canceledCount}}</span>--> Paused</a>
+              </li>
+              <li>
+                <a href="#!add"><i class="fa fa-fw fa-plus"></i> Add</a>
+              </li>
+            </ul>
+          </li>
+          <li class="nav-item" data-toggle="tooltip" data-placement="right" title="" data-original-title="Logs">
+            <a class="nav-link" href="charts.html">
+              <i class="fa fa-fw fa-file"></i>
+              <span class="nav-link-text">Logs</span>
+            </a>
+          </li>
+          <li class="nav-item" data-toggle="tooltip" data-placement="right" title="" data-original-title="Scheduler">
+            <a class="nav-link" href="tables.html">
+              <i class="fa fa-fw fa-calendar"></i>
+              <span class="nav-link-text">Scheduler</span>
+            </a>
+          </li>
+          <li class="nav-item" data-toggle="tooltip" data-placement="right" title="" data-original-title="Configuration">
+            <a class="nav-link" href="tables.html">
+              <i class="fa fa-fw fa-cog"></i>
+              <span class="nav-link-text">Configuration</span>
+            </a>
+          </li>
+        </ul>
+        <ul class="navbar-nav sidenav-toggler">
+          <li class="nav-item">
+            <a class="nav-link text-center" id="sidenavToggler">
+              <i class="fa fa-fw fa-angle-left"></i>
+            </a>
+          </li>
+        </ul>
+      </div>
+      
       <!-- !SideBar -->
       <!-- Defauld Navbar -->
       <ul class="navbar-nav ml-auto" ng-cloak ng-if="!signedUser">
@@ -185,37 +188,15 @@
   <footer class="sticky-footer">
     <div class="container">
       <div class="text-center">
-        <small>Copyright © Your Website 2018</small>
+        <small>Copyright © WebSimAdmin 2018</small>
       </div>
     </div>
   </footer>
-  <!-- Scroll to Top Button-->
-  <a class="scroll-to-top rounded" href="#page-top">
-    <i class="fa fa-angle-up"></i>
-  </a>
-  <!-- Logout Modal-->
-  <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
-          <button class="close" type="button" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">×</span>
-          </button>
-        </div>
-        <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
-        <div class="modal-footer">
-          <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-          <a class="btn btn-primary" href="login.html">Logout</a>
-        </div>
-      </div>
-    </div>
-  </div>
   <script src="/angular/angular.min.js"></script>
   <script src="/angular-route/angular-route.min.js"></script>
   <script src="/angular-utils-pagination/dirPagination.js"></script>
   <script src="/js/app.js"></script>
-  <script src="/js/controller/sign_in.js"></script>
+  <script src="/js/controller/authentication.js"></script>
   <script src="/js/controller/worker.js"></script>
   <script src="/js/controller/task.js"></script>
   <script src="/js/controller/navigation.js"></script>
