--- a/servers/web/public/index.html
+++ b/servers/web/public/index.html
@@ -198,7 +198,7 @@
   <script src="/js/app.js"></script>
   <script src="/js/controller/authentication.js"></script>
   <script src="/js/controller/worker.js"></script>
-  <script src="/js/controller/task.js"></script>
+  <script src="/js/controller/task_ctrl.js"></script>
   <script src="/js/controller/navigation.js"></script>
   <script src="/js/controller/home.js"></script>
   <script src="/jquery/jquery.min.js"></script>
