Inserts tasks to the database; Renames active to executing

--- a/servers/web/public/index.html
+++ b/servers/web/public/index.html
@@ -37,11 +37,11 @@
           <li class="nav-item" data-toggle="tooltip" data-placement="right" title="" data-original-title="Groups" ng-controller="groupCtrl">
             <a class="nav-link nav-link-collapse collapsed" data-toggle="collapse" ng-href="#collapseComponents" data-parent="#exampleAccordion">
               <i class="fa fa-fw fa-folder"></i>
-              <span class="nav-link-text">Groups</span>
+              <span class="nav-link-text">Task Sets</span>
             </a>
             <ul class="sidenav-second-level collapse" id="collapseComponents">
               <li>
-                <a href="#!active"><!--<span class="badge badge-secondary">{{activeCount}}</span>--> Active</a>
+                <a href="#!executing"><!--<span class="badge badge-secondary">{{activeCount}}</span>--> Executing</a>
               </li>
               <li>
                 <a href="#!finished"><!--<span class="badge badge-secondary">{{finishedCount}}</span>--> Finished</a>
