--- a/servers/web/public/index.html
+++ b/servers/web/public/index.html
@@ -26,7 +26,7 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <!-- SideBar -->
-      <div ng-cloak ng-show="sidebar">
+      <div ng-show="sidebar" ng-cloak>
         <ul class="navbar-nav navbar-sidenav" id="exampleAccordion">
           <li class="nav-item" data-toggle="tooltip" data-placement="right" title="" data-original-title="Workers">
             <a class="nav-link" href="#!workers">
@@ -41,21 +41,21 @@
             </a>
             <ul class="sidenav-second-level collapse" id="collapseComponents">
               <li>
-                <a href="#!executing"><!--<span class="badge badge-secondary">{{activeCount}}</span>--> Executing</a>
+                <a ng-href="#!executing"><!--<span class="badge badge-secondary">{{activeCount}}</span>--> Executing</a>
               </li>
               <li>
-                <a href="#!finished"><!--<span class="badge badge-secondary">{{finishedCount}}</span>--> Finished</a>
+                <a ng-href="#!finished"><!--<span class="badge badge-secondary">{{finishedCount}}</span>--> Finished</a>
               </li>
               <li>
-                <a href="#!paused"><!--<span class="badge badge-secondary">{{canceledCount}}</span>--> Paused</a>
+                <a ng-href="#!paused"><!--<span class="badge badge-secondary">{{canceledCount}}</span>--> Paused</a>
               </li>
               <li>
-                <a href="#!add"><i class="fa fa-fw fa-plus"></i> Add</a>
+                <a ng-href="#!add"><i class="fa fa-fw fa-plus"></i> Add</a>
               </li>
             </ul>
           </li>
           <li class="nav-item" data-toggle="tooltip" data-placement="right" title="" data-original-title="Logs">
-            <a class="nav-link" href="charts.html">
+            <a class="nav-link" ng-href="#!log">
               <i class="fa fa-fw fa-file"></i>
               <span class="nav-link-text">Logs</span>
             </a>
@@ -81,7 +81,7 @@
           </li>
         </ul>
       </div>
-      
+
       <!-- !SideBar -->
       <!-- Defauld Navbar -->
       <ul class="navbar-nav ml-auto" ng-if="!signedUser" ng-cloak>
@@ -196,11 +196,12 @@
   <script src="/angular-route/angular-route.min.js"></script>
   <script src="/angular-utils-pagination/dirPagination.js"></script>
   <script src="/js/app.js"></script>
-  <script src="/js/controller/authentication.js"></script>
+  <script src="/js/controller/authentication_ctrl.js"></script>
   <script src="/js/controller/worker.js"></script>
   <script src="/js/controller/task_ctrl.js"></script>
   <script src="/js/controller/navigation.js"></script>
   <script src="/js/controller/home.js"></script>
+  <script src="/js/controller/log_ctrl.js"></script>
   <script src="/jquery/jquery.min.js"></script>
   <script src="/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="/sb-admin/js/sb-admin.min.js"></script>
