Interface improvements and web server port change
Changes web server port to 8080
Removes graphs shadows underneath curves
Adds functional delete buttons to task set pages

--- a/servers/web/public/index.html
+++ b/servers/web/public/index.html
@@ -206,8 +206,9 @@
   <script src="/sb-admin/vendor/datatables/jquery.dataTables.js"></script>
   <script src="/sb-admin/vendor/datatables/dataTables.bootstrap4.js"></script>
   <script src="/angular-gridster/angular-gridster.min.js"></script>
-  <script src="/angularjs-gauge/angularjs-gauge.min.js"></script>  
+  <script src="/angularjs-gauge/angularjs-gauge.min.js"></script>
   <script src="/angularjs-chartjs/node_modules/chart.js/dist/Chart.min.js"></script>
   <script src="/angularjs-chartjs/dist/angular-chart.min.js"></script>
+  <script src="/angular-ui-bootstrap/ui-bootstrap-tpls.js"></script>
 </body>
 </html>
