Adds exportation button; Adds confirmation modal to task set exclusion

--- a/servers/web/public/index.html
+++ b/servers/web/public/index.html
@@ -190,6 +190,7 @@
     </div>
   </footer>
   <script src="/angular/angular.min.js"></script>
+  <script src="/angular-animate/angular-animate.min.js"></script>
   <script src="/angular-route/angular-route.min.js"></script>
   <script src="/angular-utils-pagination/dirPagination.js"></script>
   <script src="/js/app.js"></script>
