--- a/servers/web/public/index.html
+++ b/servers/web/public/index.html
@@ -26,10 +26,10 @@
       <!-- SideBar -->
       <div ng-show="sidebar && signedUser" ng-cloak>
         <ul class="navbar-nav navbar-sidenav" id="exampleAccordion">
-          <li class="nav-item" data-toggle="tooltip" data-placement="right" title="" data-original-title="Slaves">
-            <a class="nav-link" href="#!slaves">
+          <li class="nav-item" data-toggle="tooltip" data-placement="right" title="" data-original-title="Workers">
+            <a class="nav-link" href="#!workers">
               <i class="fa fa-fw fa-desktop"></i>
-              <span class="nav-link-text">Slaves</span>
+              <span class="nav-link-text">Workers</span>
             </a>
           </li>
           <li class="nav-item" data-toggle="tooltip" data-placement="right" title="" data-original-title="Task Sets" ng-controller="groupCtrl">
@@ -156,7 +156,7 @@
               </span>
             </a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#!slaves">
+            <a class="dropdown-item" href="#!workers">
               <span>
                 <strong>
                   <i class="fa fa-fw fa-dashboard"></i> Dashboard
@@ -195,7 +195,7 @@
   <script src="/angular-utils-pagination/dirPagination.js"></script>
   <script src="/js/app.js"></script>
   <script src="/js/controller/authentication_ctrl.js"></script>
-  <script src="/js/controller/slave.js"></script>
+  <script src="/js/controller/worker.js"></script>
   <script src="/js/controller/task_ctrl.js"></script>
   <script src="/js/controller/navigation.js"></script>
   <script src="/js/controller/home.js"></script>
