Add view to allow pending users

--- a/servers/web/public/index.html
+++ b/servers/web/public/index.html
@@ -138,6 +138,14 @@
               </span>
             </a>
             <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="#!admin">
+              <span>
+                <strong>
+                  <i class="fa fa-fw fa-cog"></i> Admin
+                </strong>
+              </span>
+            </a>
+            <div class="dropdown-divider"></div>
             <a class="dropdown-item" ng-click="signOut()">
               <span>
                 <strong>
@@ -174,6 +182,8 @@
   <script src="/js/controller/navigation.js"></script>
   <script src="/js/controller/home.js"></script>
   <script src="/js/controller/log_ctrl.js"></script>
+  <script src="/js/controller/admin_ctrl.js"></script>
+  <script src="/js/controller/admin_users_ctrl.js"></script>
   <script src="/js/controller/graph_ctrl.js"></script>
   <script src="/jquery/jquery.min.js"></script>
   <script src="/bootstrap/js/bootstrap.bundle.min.js"></script>
