--- a/servers/web/public/index.html
+++ b/servers/web/public/index.html
@@ -176,6 +176,7 @@
   <script src="/angular-route/angular-route.min.js"></script>
   <script src="/angular-utils-pagination/dirPagination.js"></script>
   <script src="/js/app.js"></script>
+  <script src="/js/controller/modal_ctrl.js"></script>
   <script src="/js/controller/authentication_ctrl.js"></script>
   <script src="/js/controller/worker.js"></script>
   <script src="/js/controller/task_ctrl.js"></script>
