--- a/servers/web/public/index.html
+++ b/servers/web/public/index.html
@@ -95,29 +95,30 @@
               <i class="fa fa-fw fa-circle"></i>
             </span>
           </a>
-          <div class="dropdown-menu" aria-labelledby="alertsDropdown">
-            <h6 class="dropdown-header">New Alerts:</h6>
+          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="alertsDropdown" ng-if="notifications && notifications.length > 0">
             <span ng-repeat="notification in notifications | limitTo: 5">
-              <div class="dropdown-divider"></div>
               <a class="dropdown-item" href="#">
                 <span class="{{getResultClass(notification.result)}}">
                   <strong>
                     <i class="fa fa-long-arrow-up fa-fw"></i>{{notification.title}}
                   </strong>
                 </span>
-                <span class="small float-right text-muted">11:21 AM</span>
+                <span class="small float-right text-muted">{{notification.date | date : "HH:mm dd/MM" }}</span>
                 <div class="dropdown-message small">{{notification.message}}</div>
               </a>
+              <div class="dropdown-divider"></div>
             </span>
-            <div class="dropdown-divider"></div>
             <a class="dropdown-item small" href="#">View all alerts</a>
+          </div>
+          <div class="dropdown-menu" aria-labelledby="alertsDropdown" ng-if="!notifications || notifications.length <= 0">
+            <h6 class="dropdown-header">No new notifications</h6>
           </div>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle mr-lg-2" id="alertsDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <a class="nav-link dropdown-toggle mr-lg-2" id="profileDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             {{signedUser.name}}
           </a>
-          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="alertsDropdown">
+          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="profileDropdown">
             <a class="dropdown-item" href="#">
               <span>
                 <strong>
