--- a/servers/web/public/index.html
+++ b/servers/web/public/index.html
@@ -97,7 +97,7 @@
           </a>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="alertsDropdown" ng-if="notifications && notifications.length > 0">
             <span ng-repeat="notification in notifications | limitTo: 5">
-              <a class="dropdown-item" href="#">
+              <span class="dropdown-item">
                 <span class="{{getResultClass(notification.result)}}">
                   <strong>
                     <i class="fa fa-long-arrow-up fa-fw"></i>{{notification.title}}
@@ -105,13 +105,16 @@
                 </span>
                 <span class="small float-right text-muted">{{notification.date | date : "HH:mm dd/MM" }}</span>
                 <div class="dropdown-message small">{{notification.message}}</div>
-              </a>
+                <a href="#" ng-click="readNotification($event, notification)" class="float-right">
+                  <i class="fa fa-check"></i>
+                </a>
+              </span>
               <div class="dropdown-divider"></div>
             </span>
             <a class="dropdown-item small" href="#">View all alerts</a>
           </div>
           <div class="dropdown-menu" aria-labelledby="alertsDropdown" ng-if="!notifications || notifications.length <= 0">
-            <h6 class="dropdown-header">No new notifications</h6>
+            <h6 class="dropdown-header">No new alerts</h6>
           </div>
         </li>
         <li class="nav-item dropdown">
