--- a/src/servers/web/public/index.html
+++ b/src/servers/web/public/index.html
@@ -1,5 +1,6 @@
 ﻿<!DOCTYPE html>
 <html ng-app="app">
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,7 +20,9 @@
   <!-- Navigation-->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
     <a class="navbar-brand" href="index.html">WebSimAdmin</a>
-    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
+      data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
+      aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -89,13 +92,15 @@
       <!-- Signed in Navbar -->
       <ul class="navbar-nav ml-auto" ng-if="signedUser" ng-controller="navigationCtrl" ng-cloak>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle mr-lg-2" id="alertsDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <a class="nav-link dropdown-toggle mr-lg-2" id="alertsDropdown" data-toggle="dropdown" aria-haspopup="true"
+            aria-expanded="false">
             <i class="fa fa-fw fa-bell"></i>
             <span class="indicator text-warning d-none d-lg-block" ng-if="notifications && notifications.length > 0">
               <i class="fa fa-fw fa-circle"></i>
             </span>
           </a>
-          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="alertsDropdown" ng-if="notifications && notifications.length > 0">
+          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="alertsDropdown"
+            ng-if="notifications && notifications.length > 0">
             <span ng-repeat="notification in notifications | limitTo: 5">
               <span class="dropdown-item">
                 <span class="{{getResultClass(notification.result)}}">
@@ -113,12 +118,14 @@
             </span>
             <a class="dropdown-item small" href="#">View all alerts</a>
           </div>
-          <div class="dropdown-menu" aria-labelledby="alertsDropdown" ng-if="!notifications || notifications.length <= 0">
+          <div class="dropdown-menu" aria-labelledby="alertsDropdown"
+            ng-if="!notifications || notifications.length <= 0">
             <h6 class="dropdown-header">No new alerts</h6>
           </div>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle mr-lg-2" id="profileDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <a class="nav-link dropdown-toggle mr-lg-2" id="profileDropdown" data-toggle="dropdown" aria-haspopup="true"
+            aria-expanded="false">
             {{signedUser.name}}
           </a>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="profileDropdown">
@@ -197,4 +204,5 @@
   <script src="/angularjs-chartjs/dist/angular-chart.min.js"></script>
   <script src="/angular-ui-bootstrap/ui-bootstrap-tpls.js"></script>
 </body>
+
 </html>
